--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,9 @@
+anirudh:
+  name: Anirudh Sriram
+  title: CEO and Founder @ Classnotes Buddy
+  url: https://github.com/techwithanirudh
+  image_url: https://github.com/techwithanirudh.png
+
 endi:
   name: Endilie Yacop Sucipto
   title: Maintainer of Docusaurus
