--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 anirudh:
   name: Anirudh Sriram
-  title: CEO and Founder @ Classnotes Buddy
+  title: CEO and Founder @ AniKode Studio
   url: https://github.com/techwithanirudh
   image_url: https://github.com/techwithanirudh.png
 
